tests/baselines/reference/propertyAccessOnTypeParameterWithoutConstraints.errors.txt
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts(21,18): error TS2571: Object is of type 'unknown'.
tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts(22,19): error TS2571: Object is of type 'unknown'.


==== tests/cases/conformance/types/typeParameters/typeParameterLists/propertyAccessOnTypeParameterWithoutConstraints.ts (2 errors) ====
    class C<T> {
        f() {
            var x: T;
            var a = x['toString'](); // should be string
            return a + x.toString();
        }
    }
    
    var r = (new C<number>()).f();
    
    interface I<T> {
        foo: T;
    }
    var i: I<number>;
    var r2 = i.foo.toString();
    var r2b = i.foo['toString']();
    
    var a: {
        <T>(): T;
    }
    var r3: string = a().toString();
                     ~~~
!!! error TS2571: Object is of type 'unknown'.
    var r3b: string = a()['toString']();
                      ~~~
!!! error TS2571: Object is of type 'unknown'.
    
    var b = {
        foo: <T>(x: T) => {
            var a = x['toString'](); // should be string
            return a + x.toString();
        }
    }
    
    var r4 = b.foo(1);